# nvme-cli

./: .checkpatch.conf  .gitignore  COMPLETION-GEN-DESIGN.md  COMPLETION-GEN-PLAN.md  README.md  command-metadata-schema.json  command-metadata.c  command-metadata.h  completion-gen.c  completion-gen.h  fabrics.c  meson.build  meson_options.txt  no-nvme-print-stdout-top.c  nvme-builtin.h  nvme-models-win.c  nvme-pci-ids-linux.c  nvme-print-json.c  nvme-print-stdout-top.c  nvme-print-stdout.c  nvme-print.c  nvme-print.h  nvme-rpmb.c  nvme.c  nvme.h
.github/: copilot-instructions.md
.github/workflows/: build.yml  codeql.yml  create-issue-on-failure.yml  micron-build.yml  micron-merge-master-to-mingw.yml  micron-notify-teams-on-failure.yml  micron-sync-and-merge.yml  (+4 more)
Documentation/: nvme-telemetry-log.txt  telemetry-log-current-behavior.md
completions/: GENERATOR-NOTES.md  MONDAY-NOTES.md  _nvme  bash-nvme-completion.sh  generate-completions.py  nvme-completion.ps1  test-bash-completion-interactive.exp  test-bash-completion.sh  test-zsh-completion.sh  update-completions.sh
plugins/: meson.build
scripts/: meson-vcs-tag.py
tests/: meson.build  nvme_get_features_test.py  nvme_power_measurement_log_test.py  nvme_telemetry_log_test.py
tests/plugins/: README.md  meson.build  plugin_test.py
tests/plugins/micron/: meson.build  micron_test.py  micron_vs_drive_info_test.py
tests/plugins/ocp/: meson.build  ocp_smart_add_log_test.py  ocp_test.py
unit-py/: meson.build  test_command_metadata_schema.py
util/: argconfig.c  argconfig.h  dashboard.c  mem.c
(+49 files in other folders)
